removed update API for table, fixed SQL queries, reused generated dtos
