# reserveat-server/src/main/java/com/reserveat/service/TableService.kt
@@ -1,7 +1,6 @@
 package com.reserveat.service
 
 import com.reserveat.domain.Table
-import com.reserveat.domain.dto.TableOutputDto
 import com.reserveat.repository.TableRepository
 import org.springframework.stereotype.Service
 
@@ -10,30 +9,14 @@ class TableService(
     private val tableRepository: TableRepository
 ) {
     fun createTable(
-       locationId: Long, table: Table
+        table: Table
     ): Table {
-        val table = Table(
-            id = table.id,
-            locationId = locationId,
-            numberOfSeats = table.numberOfSeats
-        )
-        return tableRepository.save(locationId, table)
-    }
-
-    fun updateTable(
-       tableId: Long, table: Table
-    ): Table {
-        val table = Table(
-            id = tableId,
-            locationId = table.locationId,
-            numberOfSeats = table.numberOfSeats
-        )
-        return tableRepository.update(table)
+        return tableRepository.save(table)
     }
 
     fun getTablesByLocationId(
-        locationId: Long
-    ): List<TableOutputDto> {
+        locationId: Int
+    ): List<Table> {
         return tableRepository.findByLocationId(locationId)
     }
 }
