# reserveat-server/src/main/java/com/reserveat/web/controller/TableController.kt
@@ -1,45 +1,31 @@
 package com.reserveat.web.controller
 
-import com.reserveat.domain.dto.*
-import com.reserveat.repository.TableRepository
+import com.reserveat.domain.Table
 import com.reserveat.service.TableService
+import com.reserveat.web.api.TableApi
+import com.reserveat.web.mapper.toTableOutputDto
+import com.reserveat.web.model.TableInputDto
+import com.reserveat.web.model.TableOutputDto
 import org.springframework.http.ResponseEntity
-import org.springframework.web.bind.annotation.*
+import org.springframework.web.bind.annotation.RestController
 
 @RestController
-@RequestMapping("/tables")
-class TableController(
-    private val tableService: TableService,
-    private val tableRepository: TableRepository
+open class TableController(
+    private val tableService: TableService
 ) : TableApi {
-    @PostMapping("/locations/{locationId}")
-    fun createTable(
-        @PathVariable locationId: Long,
-        @RequestBody tableInputDto: TableInputDto
+
+    override fun createTable(
+        locationId: Int,
+        tableInputDto: TableInputDto
     ): ResponseEntity<TableOutputDto> {
-        val table = tableService.createTable(locationId, tableInputDto.toTable())
+        val table = tableService.createTable(Table(null, locationId, tableInputDto.numberOfSeats))
         val responseDto = table.toTableOutputDto()
         return ResponseEntity.ok(responseDto)
     }
 
-    @PutMapping("/{tableId}")
-    fun updateTable(
-        @PathVariable tableId: Long,
-        @RequestBody tableInputDto: TableInputDto
-    ): ResponseEntity<TableOutputDto> {
-        val table = tableService.updateTable(tableId, tableInputDto.toTable())
-        val responseDto = table.toTableOutputDto()
-        return ResponseEntity.ok(responseDto)
-    }
-
-    @GetMapping("/{locationId}")
-    fun getTablesByLocationId(
-        @PathVariable locationId: Long
-    ): ResponseEntity<List<TableOutputDto>> {
+    override fun getLocationTables(locationId: Int): ResponseEntity<MutableList<TableOutputDto>> {
         val tables = tableService.getTablesByLocationId(locationId)
-        val responseDto = tables.map { tableOutputDto ->
-            tableOutputDto
-        }
+        val responseDto = tables.map(Table::toTableOutputDto).toMutableList()
         return ResponseEntity.ok(responseDto)
     }
 }
